--- a/src/css/style-materi-detail.css
+++ b/src/css/style-materi-detail.css
@@ -20,9 +20,9 @@
 .left-area-materi .h3-left-area {
   color: rgb(29, 29, 58);
   margin: 0;
-  text-transform: uppercase;
   font-size: 22px;
   font-weight: 900;
+  padding-right: 20px;
 }
 .left-area-materi .span-left-area {
   color: rgb(50, 50, 100);
@@ -68,6 +68,9 @@
   color: white;
   margin-top: 0;
   margin-bottom: 20px;
+}
+.sidebar-materi ul{
+  padding-top: 20px;
 }
 .sidebar-materi a {
   color: white;
@@ -219,14 +222,13 @@
 .teks-video-materi {
   font-size: 26px;
   text-align: center;
-  background-color: rgb(173, 169, 255);
-  padding: 20px;
-  border-radius: 15px;
+  padding-left: 7rem;
+  padding-top: 2rem;
 }
 .content-video-materi {
-  margin-left: 250px;
   transition: 0.5s;
-  padding: 6rem 3rem 0rem 3rem;
+  padding-left: 8rem;
+  padding-top: 5rem;
 }
 .content-materi {
   padding-top: 9rem;
@@ -263,30 +265,6 @@
 .text-decoration-materi {
   text-decoration: none;
 }
-.ini-time {
-  float: right;
-  padding-right: 10rem;
-  padding-top: 20px;
-}
-.time {
-  background-color: white;
-  color: #000(253, 230, 230);
-  border: 7px solid rgb(255, 252, 252);
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  padding: 8px;
-  text-align: center;
-  width: 260px;
-  border-radius: 15px;
-}
-.hms {
-  font-size: 20pt;
-}
-.ampm {
-  font-size: 18pt;
-}
-.date {
-  font-size: 14pt;
-}
 .card3-materi{
   padding-top: 1rem;
 }
@@ -303,37 +281,37 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  width: 470px;
+  width: 450px;
   height: 520px;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   float: right;
-  box-shadow: 5px 5px 5px 5px rgba(49, 33, 94, 0.7);
+  box-shadow: 5px 5px 5px 5px rgba(183, 158, 252, 0.7);
   padding-bottom: 4rem;
 }
-.box-video-materi img {
-  width: 250px;
+.videomateriindo {
+  width: 350px;
   height: 250px;
-  padding: 30px;
-  padding-bottom: 20px;
-  padding-top: 10px;
+  display: flex;
+  justify-content: center;  
+  padding-bottom: 30px;
 }
 .box-video-materi:hover{
   transform: scale(1.1);
   transition: 1s;
 }
 .button-vid-materi:hover {
-  background-color: rgb(19, 15, 61);
-  color: white;
+  background-color: rgb(171, 165, 237);
+  color: black;
 }
 .button-vid-materi {
   border-radius: 15px;
   border: solid 2px rgb(213, 213, 213);
   width: 170px;
   height: 80px;
-  background-color: rgb(112, 131, 192);
+  background-color: rgb(19, 15, 61);
   font-size: 16px;
-  color: black;
+  color: white;
 }
 .text-vid-materi{
   padding-top: 3rem;
@@ -351,6 +329,92 @@
   height: 500px;
   color: white;
 }
+.table-video-materi{
+  display: flex;
+  justify-content: center;
+  padding-left: 10rem;
+}
 .active-2-materi {
   background-color: #6084bb;
+}
+.container-slider {
+  max-width: 950px;
+  height: 550px;
+  margin: 100px auto 0;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.slider-materi-indo{
+      padding-top: 8%;
+      padding-left: 18%;
+}
+@media screen and (max-width: 700px){
+  .container-slider {
+    margin: 100px 10px 0;
+  }
+}
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s;
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.active-anim {
+  opacity: 1;
+}
+
+.btn-slide {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn-slide img {
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+}
+.prev {
+  top: 50%;
+  left: 20px;
+  transform: translateY(-60%);
+}
+.next {
+  top: 50%;
+  right: 20px;
+  transform: translateY(-60%);
+}
+
+
+.container-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 3px solid #f1f1f1;
+  margin: 0 5px;
+  background: #f1f1f1;
+}
+.dot.active {
+  background: rgb(32, 32, 32);
 }
