--- a/src/css/style-welesson.css
+++ b/src/css/style-welesson.css
@@ -1,391 +1,137 @@
 *{
-    margin: 0 auto !important;
-    padding: 0 auto !important;
+    margin: 0;
+    padding: 0;
     font-family: 'Quicksand', sans-serif;
 }
-.background{
-    background-image: url("../img/bg2.png");
-    background-size: auto;
-    position: relative;
-    background-repeat: repeat;
-    background-position: center;
-}
-.layer{
-    position: relative;
-    box-sizing: border-box;
-    border-radius: 40px;
-    top:10% ;
-    width:90%;
-    height: 85%;
-    background-color: rgba(0, 0, 0, 0.19);
-}
-.div-row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.dua-col{
-    padding:10px 10px;
-    transition: 0.5s;
-}
-.dua-col:hover{
-    padding-top: 10px;
-    box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.19);
-}
-.button{
-    padding: 100px;
-    padding-left: 0;
-}
-.tombol{
-    padding: 15px;
-    padding-left: 0;
-}
-.animasi{
-    transition: all 0.1s;
-    -webkit-transition: all 0.1s;
-}
-.tombol-aktif{
-    padding: 20px 80px;
-    border-radius: 10px;
-    font-size: 25px;
-    color : #fff;
-    text-decoration: none;
-}
-.button-aktif{
-    padding: 20px 40px;
-    border-radius: 5px;
-    font-size: 20px;
-    color : rgb(63, 46, 46);
-    text-decoration: none;
-    float: right;
-    margin-top: 20%;
-}
-.button-aktif:active{
-    transform: translate(100px,50px);
-    -webkit-transform: translate(0px,5px);
-    border-bottom: 1px solid;
-    background-color:coral;
-}  
-.ungu{
-    background-color:#220FF4;
-    opacity: 41%;;
-    border-bottom: 5px solid indianred;
-    text-shadow: 0px -2px indianred;
-}
-.hijau{
-    background-color:#FFEA79 ;
-    opacity: 80%;
-    box-sizing: border-box;
-    border-bottom: 1px solid#000;
-}
-.tombol-aktif:active{
-    transform: translate(100px,50px);
-    -webkit-transform: translate(0px,5px);
-    border-bottom: 1px solid;
-}  
-.judul{
-    text-align: center;
-    font-size: 30px;
-    color: rgb(63, 46, 46);
-}
-.about{
-    text-align: center;
-    font-size: 35px;
-    color: black;
-    padding-bottom: 50px;
-    padding-top: 50px;
-}
-.col-4{
-        width: 25%;
-        box-sizing: border-box;
-        padding: 5px;
-        float: left;
-        text-align: center;
-        margin-bottom: 20px;
-        padding-top: 50px;       
-}
-.col-4 img{
-        padding: 70px;
-        margin: 20px;
-        height: 329px;
-        width: 302px;
-        background:#EEDEFF;
-        border-radius: 50px;
-        box-sizing: border-box;
-        transition: 0.5s;
-}
-.col-4 a:hover img{
-        transform: scale(1.2);
-}
-.p1{
-    text-align: center;
-    padding: 28px;
-    color: bl;
-    font-size: 20px;
-}
-.p2{
-    text-align: center;
-    padding: 28px;
-    color: #fff;
-    font-size: 20px;
-}
-.p3{
-    text-align: center;
-    padding: 9px;
-    color: black;
-    font-size: 19px;
-}
-.row{
-    margin-top: 15%;
-    display: flex;
-    padding: 20px;
-    justify-content: space-between;
-}
-.gambar{
-    float: right;
-}
-.gambar-col{
-    flex-basis: 31%;
-    background:khaki;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding:20 px 12px;
-    box-sizing: border-box;
-    transition: 0.5s;
-}
-.sejajar{
-    padding-top: 5%;
-    padding-right: 35px;
-}
-
-@media(max-width:700px){
-.row{
-        flex-direction: column;
-    }
-}
-.box1{
-    width: 600px;
-    height: 170px;
-    background: #8386DD;
-    opacity: 45%;
-    border-radius: 10px;
-    font-size:30px ;
-    text-align: center;
-    padding-top: 20px;
-    padding: inherit;
-}
-.jadwal-col{
-    flex-basis: 31%;
-    background:#E1DFEE;
-    border-radius: 10px;
-    margin-bottom: 5%;
-    padding: 10px;
-    box-sizing: border-box;
-    transition: 0.5s;
-}
-.jadwal-col:hover{
-    box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.19);
-}
-.sejajar{
-    display: flex;
-    justify-content:space-between;
-    font-size: 30px;
-    text-align: center;
-    padding-top: 5%;
-}
-.waktu-col{
-    flex-basis: 14%;
-    background:#486383;
-    border-radius: 30px;
-    margin-bottom: 5%;
-    box-sizing: border-box;
-    padding:20 px 12px;
-    transition: 0.5s;
-    width: 600px;
-}
-.luar{
-    background-image: url("../img/wavess.svg");
-    background-size: cover;
-    background-color: rgb(202, 202, 248);
-    background-repeat: no-repeat;
-    position: relative;
-    background-position: center;
-    height: 100%;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-.dalam{
-    position: relative;
-    box-sizing: border-box;
-    width: 90%;
-    height: 70%;
-    background-color: #FFFFFF;
-    border-radius: 30px;
-}
-.putih{
-    background-color: #fff;
-    position: relative;
-    height: 100%;
-    margin-top: 4%;
-    margin-bottom: 4%;
-}
-.awan{
-    position: relative;
-    box-sizing: border-box;
-    border-radius: 50px;
-    top:5% ;
-    padding: 50px;
-    width:95%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("../img/wal.png");
-}
-.box2{
-    padding-top: 10px;
-    width: 11%;
-    height: 65px;
-    background: #BF6F6F;
-    border-radius: 10px;
-    text-align: center;
-}
-.box3{
-    padding-top: 10px;
-    width: 11%;
-    height: 65px;
-    background: #B6A0A0;
-    border-radius: 10px;
-    text-align: center;
-}
-footer {
-    background-color:white;
-    padding-left: 100px;
-}
-footer ul li {
-    display: inline-block;
-    color: black;
-    margin-right: 12px;
-}
-/* Style Lesson */
-
-.headerlesson{
+.header-welesson{
     height: 70px;
-    background-color: #1c2244;
+    background-color: #131331;
 }
-.headerlesson img{
-    width: 180px;
-    float: left;
-    padding-top: 10px;
+.WeLesson{
+    background-color: rgb(29, 29, 48);
 }
-.headerlesson ul{
+.header-welesson h1 a{
+    transition: .4s;
+    color: rgb(210, 227, 230);
+}
+.header-welesson h1 a:hover{
+    color:rgb(97, 91, 182);
+}
+.header-welesson ul{
     float: right;
 }
-.headerlesson ul li{
-    padding: 2px;
-    padding-top: 20px;
+.header-welesson ul li{
+    padding: 5px;
     display: inline-block;
     font-size: 15px;
+    padding-top: 25px;
 }
-.headerlesson ul li a{
+.header-welesson ul li a{
     transition: 0.3s;
     color: rgb(217, 237, 240);
     padding-top: 30px;
 }
-.headerlesson ul li a:hover{
-    color: rgb(150, 153, 180);
-    color: rgb(149, 158, 182);
+.header-welesson ul li a:hover{
+    color: rgb(5, 8, 41);
+}
+.logo-welesson{
+    width: 160px;
+    height: 35px;
+    padding-top: 1rem;
 }
 a{
     text-decoration: none;
     padding-top: 5px;
 }
-.namatpstka{
-    background-color: rgb(30, 32, 99);
-    color: white;
-}
-h3 {
-    font-size: 30px;
+.namatpstka-welesson{
+    background-color: rgb(213, 216, 255);
+    color: rgb(8, 8, 36);
 }
 
-.jud {
+.h3-welesson{
+    font-size: 25px;
+}
+.jud-welesson {
     text-align: center;
     padding: 8px;
     font-size: 20px;
 }
-
-.judu {
+.button-welesson{
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+}
+.judu-welesson {
     text-align: center;
     padding: 8px;
     font-size: 22px;
 }
-#submit {
-    background: -webkit-radial-gradient(right, #131e94, rgb(128, 142, 223));
+#submit-welesson {
+    background-color: rgb(44, 9, 44);
     border: none;
-    border-radius: 21px;
-    box-shadow: 0px 1px 8px #5360a8;
+    border-radius: 10px;
     cursor: pointer;
     color: white;
-    height: 42px;
-    margin: 0 auto;
+    height: 50px;
+    padding: 10px;
     margin-top: 10px;
     transition: 0.25s;
-    width: 150px;
+    width: 230px;
     align-items: center;
+    float: right;
 }
 
-#all{
-    padding: 20px;
+#submit-welesson:hover{
+    background-color: rgb(255, 169, 206);
+    color: black;
 }
 
-.judul-pu p {
+.judul-pu-welesson p {
     text-align: center;
 }
 
-.judul-pu, .judul-pk, .judul-mbm, .judul-ve, .judul-ag, .judul-lo, .judul-sp{
+.judul-pu-welesson, .judul-pk-welesson, .judul-mbm-welesson, .judul-ve-welesson, .judul-ag-welesson, .judul-lo-welesson, .judul-sp-welesson{
     margin-top: 3%;
     flex-basis: 31%;
-    background:rgb(199, 205, 255);
+    background:white;
     border-radius: 10px;
     margin-bottom: 5%;
-    padding: 20px 12px;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     box-sizing: border-box;
     transition: 0.5s;
-    box-shadow: 7px 7px 10px #7980a0;
-    border-radius: 20px;
+    border-radius: 10px;
     text-align: justify;
     
 }
 
-#pu, #pk, #mbm, #tpa, #ve, #ag, #lo, #sp {
-    padding: 30px;
-}
-.container{
+.container-welesson{
     width: 80%;
+    margin: 0 auto;
     text-decoration: none;
 }
 
-.judul-pu p ul li {
+.judul-pu-welesson p ul li {
     text-decoration: none;
 }
 
-.container::after{
+.container-welesson::after{
     content: '';
     display: block;
     clear: both;
 }
-.mobile-menu{
+.mobile-menu-welesson{
     float: right;
     display: none;
     padding: 18px;
 }
-.mobile-menu:hover{
+.mobile-menu-welesson:hover{
     cursor: pointer;
 }
-#check{
+#check-welesson{
     display: none;
 }
-.nav{
+.sidebar-welesson{
     position: fixed;
     top: 0;
     bottom: 0;
@@ -393,63 +139,63 @@ h3 {
     width: 300px;
     transition: 0.5s;
     z-index: 9999;
-    background-color: #5063b4;
+    background-color: #526ce6;
 }
-.nav ul li a{
+.sidebar-welesson ul li a{
     color: blanchedalmond;
 }
-.nav ul li{
+.sidebar-welesson ul li{
     padding: 24px;
     transition: .3s;
 }
-.nav ul li:hover{
+.sidebar-welesson ul li:hover{
     background-color: #764d69;
 
 }
-#check:checked ~ .sidebar{
+#check-welesson:checked ~ .sidebar{
     left: 0;
 }
-.section{
-    padding: 50px 0;
+.section-welesson{
+    padding: 20px 0;
 }
-.judul-tps{
+.judul-tps-welesson{
     text-align: center;
     padding: 30px;
 }
-.judul-tpa{
+.judul-tpa-welesson{
     text-align: center;
     padding: 30px;
 }
-section h3{
+.section-welesson .h3-welesson{
     padding-bottom: 20px;
     text-align: center;
     margin: 20px;
     position: relative;
 }
-section h3::before{
+.section-welesson .h3-welesson::before{
     content:'';
     display: block;
     position: absolute;
     bottom: 0;
     width: 120px;
     height: 1px;
-    background-color: rgb(216, 112, 181);
+    background-color: palevioletred;
     left: calc(50% - 60px);
 }
-section h3::after{
+.section-welesson .h3-welesson::after{
     content:'';
     display: block;
     position: absolute;
     bottom: -1px;
     width: 40px;
     height: 4px;
-    background-color: rgb(97, 30, 91);
+    background-color: red;
     left: calc(50% - 20px);
 }
-#contact{
+#contact-welesson{
     background-color: rgb(245, 194, 128);
 }
-.pk .bar{
+.pk-welesson .bar-welesson{
     height: 30px;
     border: 1px solid orangered;
     margin-top: 5px 0 20px 0;
@@ -457,15 +203,94 @@ section h3::after{
 html{
     scroll-behavior: smooth;
 }
+.container-slider2 {
+  max-width: 100%;
+  height: 500px;
+  margin: 100px auto 0;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.slider-materi-indo{
+      padding-top: 8%;
+      padding-left: 18%;
+}
+@media screen and (max-width: 700px){
+  .container-slider {
+    margin: 100px 10px 0;
+  }
+}
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s;
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.active-anim {
+  opacity: 1;
+}
+
+.btn-slide {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btn-slide img {
+  width: 25px;
+  height: 25px;
+  pointer-events: none;
+}
+.prev {
+  top: 50%;
+  left: 20px;
+  transform: translateY(-60%);
+}
+.next {
+  top: 50%;
+  right: 20px;
+  transform: translateY(-60%);
+}
+
+
+.container-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.dot2 {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  border: 3px solid #f4e2ff;
+  margin: 0 5px;
+  background: #f4e2ff;
+}
+.dot2.active2 {
+  background: rgb(24, 8, 48);
+}
 @media (max-width: 768px){
-    .mobile-menu{
+    .mobile-menu-welesson{
         display: block;
         padding: 10px;
         font-size: 50px;
     }
-    header ul {
+    .header-welesson ul {
         display: none;
     }
 }
-
-
