--- a/src/css/style-beranda.css
+++ b/src/css/style-beranda.css
@@ -411,9 +411,6 @@ a {
 .button-wsat-beranda {
   padding-left: 7rem;
 }
-.button-wsat-beranda2{
-  padding-left: 2rem;
-}
 .btn-wsat2-beranda2 {
   background-color: rgb(63, 38, 97);
   border-radius: 25px;
@@ -424,7 +421,7 @@ a {
   margin: 0 auto;
   margin-top: 80px;
   transition: 0.25px;
-  width: 260px;
+  width: 230px;
 }
 .btn-wsat2-beranda2 a {
   color: white;
@@ -453,6 +450,7 @@ a {
 #ini-wsat2-beranda .img-beranda2 {
   float: left;
   padding-top: 2rem;
+  padding-right: 2rem;
   width: 420px;
 }
 .text-wsat2-beranda {
