--- a/src/css/style-wexam.css
+++ b/src/css/style-wexam.css
@@ -70,6 +70,7 @@ color: #fff;
     font-size: 15px;
     color : rgb(63, 46, 46);
     text-decoration: none;
+    background-color: blanchedalmond;
 }
 .button-aktif-wxam:active{
     transform: translate(50px,50px);
