--- a/src/css/style-signup.css
+++ b/src/css/style-signup.css
@@ -3,33 +3,42 @@
       margin:0;
       font-family: 'Quicksand', sans-serif;
 }
+.Signup{
+    background-color: rgb(240, 237, 255);
+}
 .signuppage{
-      padding: 10rem 11rem 8rem 8rem;
-      background-color: rgb(188, 200, 230);
+      display: flex;
+      justify-content: center;
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+      background-color: rgb(35, 31, 72);
 }
 .signuppage img{
+    padding-top: 3rem;
       width: 600px;
       height: 450px;
 }
 #card-signup{
-      background: #d1ccff;
+      background: #ffffff;
       border-radius: 8px;
       box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-      height: 460px;
-      width: 355px;
+      height: 690px;
+      width: 490px;
       float: right;
 }
 #card-content-signup {
-      padding: 12px 44px;
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
 }
 #card-title-signup {
       letter-spacing: 4px;
       padding-bottom: 23px;
-      padding-top: 13px;
+      padding-top: 40px;
       text-align: center;
 }
 .underline-title-signup {
-      background: -webkit-linear-gradient(right, #150b38, #9e91eb);
+      background:black;
       height: 2px;
       margin: 1rem auto 0 auto;
       width: 89px;
@@ -42,17 +51,18 @@ a {
 }
 .label1-signup h2{
       padding-bottom: 13px;
-      font-size: 16px;
+      font-size: 14px;
 }
 .button-login-signup{
-    padding-left: 6rem;
     color: white;
+    display: flex;
+    justify-content: center;
+    padding-top: 3rem;
 }
 .submit-signup{
-    background: -webkit-linear-gradient(right,#2c2c54,#2c2c54);
+    background: rgb(25, 25, 75);
     border-radius: 21px;
     border: none;
-    box-shadow: 0px 1px 8px #2c2c54;
     cursor: pointer;
     height: 42.3px;
     margin: 0 auto;
@@ -80,17 +90,21 @@ a {
 .form-signup{
     display: flex;
     flex-direction: column;
+    padding-top: 1rem;
 }
 .form-signup h2{
     font-size: 18px;
 }
+.underline{
+    padding-top: 1rem;
+}
 .form-content-signup{
-    background-color: white;
+    background-color: rgb(226, 221, 221);
     border: none;
     outline: none;
-    width: 300px;
+    width: 350px;
     height: 35px;
-    border-radius: 15px;
+    border-radius: 10px;
     align-items: center;
 }
 .labels-signup{
