--- a/src/css/style-utama.css
+++ b/src/css/style-utama.css
@@ -1,27 +1,24 @@
 .bg-utama {
-  background-image: url("../img/vektor-utama.png");
+  background-image: url("../img/vektor-utama2.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 700px;
+  height: 750px;
 }
 .gb-utama{
       padding-right: 4rem;
       padding-top: 2rem;
 }
 .img-utama{
-      width: 450px;
+      width: 470px;
       height: 450px;
       float: right;
 }
 .text-beranda-utama{
       padding-top: 5rem;
-      text-align: center;
       color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding-left: 6rem;
 }
 .beranda-h1{
       font-size: 40px;
@@ -31,35 +28,28 @@
 .beranda-h2{
       font-size: 20px;
       text-align: left;
-      padding-left: 11rem;
+      padding-left: 4rem;
       color: white;
 }
 .img-logo-utama{
       width: 180px;
-      padding-top: 1%;
-      padding-left: 4rem;
-}
-.beranda-h2{
-      text-align: center;
+      padding-top: 2%;
+      padding-left: 5rem;
 }
 .text-beranda-utama2{
-      text-align: center;
       color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-top: 1rem;
+      padding-top: 2rem;
+      padding-left: 2em;
+}
+.button-login-signup{
+      float: left;
+      padding-left: 6rem;
 }
 #button-login1{
-    padding-top: 3rem;
-    padding-left: 12rem;
-    display: flex;
-    justify-content: center;
     color: white;
-    float: left;
 }
 #submit-login1{
-    background: rgb(162, 129, 255);
+    background: rgb(107, 78, 187);
     border-radius: 21px;
     border: none;
     cursor: pointer;
@@ -74,7 +64,7 @@
     font-size: 16px;
 }
 #submit-login1:hover{
-    background: rgb(209, 130, 255);
+    background: rgb(173, 99, 216);
     border-radius: 21px;
     border: none;
     cursor: pointer;
@@ -85,19 +75,10 @@
     width: 153px;
 }
 
-#button-signup1{
-    padding-top: 3rem;
-    padding-left: 1rem;
-    display: flex;
-    justify-content: center;
-    color: white;
-    float: left;
-}
 #submit-signup1{
-    background-color: rgb(234, 228, 255);
+    background-color: white;
     border-radius: 21px;
     border: none;
-    box-shadow: 0px 1px 8px #2c2c54;
     cursor: pointer;
     height: 42.3px;
     margin: 0 auto;
@@ -110,7 +91,7 @@
     font-size: 16px;
 }
 #submit-signup1:hover{
-    background: rgb(209, 130, 255);
+    background: rgb(227, 179, 255);
     border-radius: 21px;
     border: none;
     cursor: pointer;
