--- a/src/css/style-signup.css
+++ b/src/css/style-signup.css
@@ -58,6 +58,7 @@ a {
     display: flex;
     justify-content: center;
     padding-top: 3rem;
+    padding-left: 10rem;
 }
 .submit-signup{
     background: rgb(25, 25, 75);
