--- a/src/css/style-signup.css
+++ b/src/css/style-signup.css
@@ -53,12 +53,11 @@ a {
       padding-bottom: 13px;
       font-size: 14px;
 }
-.button-login-signup{
+.button-signup{
     color: white;
     display: flex;
     justify-content: center;
     padding-top: 3rem;
-    padding-left: 10rem;
 }
 .submit-signup{
     background: rgb(25, 25, 75);
