--- a/src/css/style-tryout.css
+++ b/src/css/style-tryout.css
@@ -1,5 +1,5 @@
 .TryOut{
-      background-color: rgb(165, 171, 255);
+      background-color: white;
       padding: 12.3%;
 }
 .quiz {
@@ -8,16 +8,15 @@
 }
 
 .question {
-  background-color: #14195a;
+  background-color: #0e1031;
   color: white;
   padding: 5%;
-  min-height: 60px;
+  min-height: 80px;
   display: flex;
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  border-radius: 10px;
 }
 
 .results {
@@ -47,7 +46,6 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  border-radius: 10px;
 }
 
 .answers {
@@ -59,7 +57,7 @@
 
 .answer-letter {
   font-size: 30px;
-  background-color: #1b112b;
+  background-color: #11132b;
   color: #fff;
   width: 70px;
   display: flex;
