--- a/src/css/style-utama.css
+++ b/src/css/style-utama.css
@@ -18,7 +18,7 @@
 .text-beranda-utama{
       padding-top: 5rem;
       color: white;
-      padding-left: 6rem;
+      padding-left: 6%;
 }
 .beranda-h1{
       font-size: 40px;
@@ -28,7 +28,7 @@
 .beranda-h2{
       font-size: 20px;
       text-align: left;
-      padding-left: 4rem;
+      padding-left: 4%;
       color: white;
 }
 .img-logo-utama{
@@ -106,4 +106,25 @@
     display: flex;
     justify-content: center;
     padding-top: 3rem;
+}
+@media screen and (min-width: 350px) and (max-width: 800px){
+.bg-utama{
+    width: 100%;
+    height: 820px;
+}
+.img-utama{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    height: 300px;
+}
+.text-beranda-utama{
+    width: 100%;
+}
+.beranda-h1{
+    font-size: 30px;
+}
+.button-login-signup{
+    padding-top: 40%;
+}
 }
